# rylees

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  compose.prod.yaml  compose.yaml  fly.postgres.toml  fly.toml
.claude/: MEMORY.md  project_structure.md  settings.json
.claude/skills/do-board-runner/: SKILL.md
.claude/skills/linear-worker/: SKILL.md
.claude/skills/rylees-release-note/: SKILL.md
.github/workflows/: codex-pr-human-review.yml  fly-deploy.yml  tests.yml
docker/: README.md  compose.base.yaml  compose.dev.yaml  compose.prod.yaml  env.example
docker/api/: Dockerfile  Dockerfile.dockerignore  apache-vhosts.conf.template  entrypoint.sh  php.prod.ini
docs/architecture/adr/: adr-001-system-decomposition.md  adr-002-cli-tool.md  adr-003-llm-integration.md  adr-004-hitl-principle.md  adr-005-modular-monolith-rest-api.md
docs/architecture/diagrams/: buildingblock-api.md  buildingblock-cli.md  sequencecli-generate-rn.md  system-overview.md
docs/design/api/: cli-endpoints.md
docs/design/cli/: usage.md
docs/design/database/: schema.md
docs/layouts/web-developer-console/: Developer Console.fig
src/: fly.toml
src/api/: .env.example  CLAUDE.md  composer.json  pint.json
src/api/bootstrap/: app.php  providers.php
src/cli/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/cli/app/: api_client.py  cli.py  code_analyzer.py  config.py  git_connector.py  models.py  release_notes_generator.py  rn_publisher.py  tracing.py  validator.py
src/cli/spec/: IMPLEMENTATION.md  SPEC.md
src/cli/tests/: test_api_client.py  test_cli.py  test_code_analyzer.py  test_config.py  test_git_connector.py  test_release_notes_generator.py  test_rn_publisher.py  test_tracing.py  test_validator.py
src/frontend/: .env.development  .env.docker  .env.production  .gitignore  CLAUDE.md  babel.config.cjs  history.html  jest.config.cjs  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+229 files in other folders)
