[project]
name = "rylees"
version = "0.1.5"
description = "LLM-assisted release note generator and publisher"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Marc Zimmerli", email = "marc@uniqode.ch" }]
keywords = ["release-notes", "cli", "llm", "git"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
dependencies = [
    "typer>=0.12",
    "langchain-openai>=0.2",
    "langsmith>=0.1",
    "gitpython>=3.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
rylees = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["spec", "CLAUDE.md"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Ship .env.example inside the installed package (AC-CLI-02).
[tool.hatch.build.targets.wheel.force-include]
".env.example" = "app/.env.example"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "respx>=0.21",
]

[project.urls]
Repository = "https://github.com/zihmm/rylees"
